# Simple-Callculator

./: README.md  main.cpp
Simple_Callculator/: CMakeLists.txt  Logic.cpp  Logic.h  Simple_Callculator.qmlproject  Simple_Callculator.qmlproject.qtds  mainwindow.cpp  mainwindow.h  mainwindow.ui
Simple_Callculator/Simple_Callculator/: Constants.qml  qmldir
Simple_Callculator/Simple_Callculator/designer/: plugin.metainfo
Simple_Callculator/Simple_CallculatorContent/: App.qml  Screen01.ui.qml
